--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<slack.api.version>1.2.0</slack.api.version>
 		<glassfish.version>1.13.1</glassfish.version>
 		<jasperreport.version>6.8.0</jasperreport.version>
+		<log4j2.version>2.15.0</log4j2.version>
 	</properties>
 
 	<dependencies>
